min-height added for flicker issue fix

--- a/styles/index.css
+++ b/styles/index.css
@@ -31,6 +31,10 @@ html {
   flex-direction: column;
 }
 
+.multiaction-area-card img {
+  min-height: 20%;
+}
+
 @media (max-width: 680px) {
   .page-header {
     flex-wrap: wrap;
